--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <!---------Header  area section start heare-->
+    <!---------Header-area section start heare-->
     <div class="header-area">
         <div class="header-wrapper">
             <nav>
@@ -23,7 +23,8 @@
             </nav>
         </div>
     </div>
-    <!---------Header  area section end heare-->
+    <!---------Header-area section end heare-->
+    <!---------About area section start heare-->
 
 </body>
 
