--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <!---------Header-area section start heare-->
+    <section>
     <div class="header-area">
         <div class="header-wrapper">
             <nav>
@@ -22,9 +23,42 @@
                 <a href="#" class="btn">Subscrive</a>
             </nav>
         </div>
+        <div class="container">
+        <div class="content">
+            <h1>Hello I am<h3> Iftakhar <span>Alam</span></h3></h1>
+            <h3>I am a web developer</h3>
+        </div>
+        <div class="newsletter">
+            <form class="form">
+                <input type="email" placeholder="Hold your email">
+                <input type="submit" placeholder="lets start">
+            </form>
+            
+        </div>
     </div>
+    </div>
+    </section>
     <!---------Header-area section end heare-->
     <!---------About area section start heare-->
+    <section>
+        <div class="about-area">
+            <div class="container">
+                <div class="about-wrapper">
+                    <img src="images/aboout.jpg" alt="">
+                    <div class="about-text">
+                        <h2>About me</h2>
+                        <h5>Developer & Designer</h5>
+                        <p>I am a fornt-end web developer.I can provide
+                            clean code and pixel perfect design.I also make the website more and more interactivite with web animations.I can provide clean and pixel perfect design.
+                        </p>
+                        <button class="btn" type="button">Lets start
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!---------About area section end heare-->
 
 </body>
 
